--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "@material-ui/icons": "^3.0.1",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
-    "react-pdf-js": "^4.0.0-alpha.6",
+    "react-router-dom": "^4.3.1",
     "react-scripts": "2.0.4"
   },
   "scripts": {
